hunspell_dictionaries = [
  "//third_party/hunspell_dictionaries/af-ZA-3-0.bdic",
  "//third_party/hunspell_dictionaries/bg-BG-3-0.bdic",
  "//third_party/hunspell_dictionaries/ca-ES-3-0.bdic",
  "//third_party/hunspell_dictionaries/cs-CZ-3-0.bdic",
  "//third_party/hunspell_dictionaries/cy-GB-1-0.bdic",
  "//third_party/hunspell_dictionaries/da-DK-3-0.bdic",
  "//third_party/hunspell_dictionaries/de-DE-3-0.bdic",
  "//third_party/hunspell_dictionaries/el-GR-3-0.bdic",
  "//third_party/hunspell_dictionaries/en-AU-10-0.bdic",
  "//third_party/hunspell_dictionaries/en-AU-10-1.bdic",
  "//third_party/hunspell_dictionaries/en-CA-10-0.bdic",
  "//third_party/hunspell_dictionaries/en-CA-10-1.bdic",
  "//third_party/hunspell_dictionaries/en-GB-10-0.bdic",
  "//third_party/hunspell_dictionaries/en-GB-10-1.bdic",
  "//third_party/hunspell_dictionaries/en-GB-oxendict-10-0.bdic",
  "//third_party/hunspell_dictionaries/en-GB-oxendict-10-1.bdic",
  "//third_party/hunspell_dictionaries/en-US-10-0.bdic",
  "//third_party/hunspell_dictionaries/en-US-10-1.bdic",
  "//third_party/hunspell_dictionaries/es-ES-3-0.bdic",
  "//third_party/hunspell_dictionaries/et-EE-3-0.bdic",
  "//third_party/hunspell_dictionaries/fa-IR-9-0.bdic",
  "//third_party/hunspell_dictionaries/fo-FO-3-0.bdic",
  "//third_party/hunspell_dictionaries/fr-FR-3-0.bdic",
  "//third_party/hunspell_dictionaries/he-IL-3-0.bdic",
  "//third_party/hunspell_dictionaries/hi-IN-3-0.bdic",
  "//third_party/hunspell_dictionaries/hr-HR-3-0.bdic",
  "//third_party/hunspell_dictionaries/hu-HU-3-0.bdic",
  "//third_party/hunspell_dictionaries/hy-1-0.bdic",
  "//third_party/hunspell_dictionaries/id-ID-3-0.bdic",
  "//third_party/hunspell_dictionaries/it-IT-3-0.bdic",
  "//third_party/hunspell_dictionaries/ko-3-0.bdic",
  "//third_party/hunspell_dictionaries/lt-LT-3-0.bdic",
  "//third_party/hunspell_dictionaries/lv-LV-3-0.bdic",
  "//third_party/hunspell_dictionaries/nb-NO-3-0.bdic",
  "//third_party/hunspell_dictionaries/nl-NL-3-0.bdic",
  "//third_party/hunspell_dictionaries/pl-PL-3-0.bdic",
  "//third_party/hunspell_dictionaries/pt-BR-3-0.bdic",
  "//third_party/hunspell_dictionaries/pt-PT-3-0.bdic",
  "//third_party/hunspell_dictionaries/ro-RO-3-0.bdic",
  "//third_party/hunspell_dictionaries/ru-RU-3-0.bdic",
  "//third_party/hunspell_dictionaries/sh-3-0.bdic",
  "//third_party/hunspell_dictionaries/sh-4-0.bdic",
  "//third_party/hunspell_dictionaries/sk-SK-3-0.bdic",
  "//third_party/hunspell_dictionaries/sl-SI-3-0.bdic",
  "//third_party/hunspell_dictionaries/sq-3-0.bdic",
  "//third_party/hunspell_dictionaries/sr-3-0.bdic",
  "//third_party/hunspell_dictionaries/sr-4-0.bdic",
  "//third_party/hunspell_dictionaries/sv-SE-3-0.bdic",
  "//third_party/hunspell_dictionaries/ta-IN-3-0.bdic",
  "//third_party/hunspell_dictionaries/tg-TG-5-0.bdic",
  "//third_party/hunspell_dictionaries/tr-TR-4-0.bdic",
  "//third_party/hunspell_dictionaries/uk-UA-4-0.bdic",
  "//third_party/hunspell_dictionaries/uk-UA-5-0.bdic",
  "//third_party/hunspell_dictionaries/vi-VN-3-0.bdic",
  "//third_party/hunspell_dictionaries/xx-XX-3-0.bdic",
]

hunspell_licenses = [
  "//third_party/hunspell_dictionaries/COPYING",
  "//third_party/hunspell_dictionaries/COPYING.Apache",
  "//third_party/hunspell_dictionaries/COPYING.LESSER",
  "//third_party/hunspell_dictionaries/COPYING.LGPL",
  "//third_party/hunspell_dictionaries/COPYING.MIT",
  "//third_party/hunspell_dictionaries/COPYING.MPL",
  "//third_party/hunspell_dictionaries/LICENSE",
]
